# mpc-rpn

./: .bumpversion.cfg  SKILL.md  pyproject.toml
src/mcp_rpn/: __init__.py  __main__.py
